# nonebot_plugin_BR

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_BR/: __init__.py  __main__.py  action.py  config.py  game.py  model.py  robot.py  utils.py  weapon.py
